# internet_auction

./: .env.db  .env.dev  .gitignore  Makefile  README.md
.circleci/: config.yml
backend/: Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/auction/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  variables.py  views.py
backend/helpers/: url_base.py
backend/internet_auction/: asgi.py  celery.py  pagination.py  settings.py  urls.py  wsgi.py
backend/item/: models.py  tests.py  urls.py  views.py
backend/lot/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/offer/: models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  variables.py  views.py
backend/test/: base_test.py  conftest.py  test_auction.py  test_item.py  test_lot.py  test_offer.py  test_user.py
backend/user/: models.py  tests.py
