[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anton"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
Pillow = "^8.1.2"
djangorestframework = "^3.12.4"
psycopg2 = "^2.8.6"
drf-spectacular = "^0.17.2"
django-cors-headers = "^3.7.0"
celery = "^5.1.2"
redis = "^3.5.3"
django-celery-beat = "^2.2.0"
channels = "^3.0.4"
channels-redis = "^3.3.0"
djangorestframework-simplejwt = "^4.7.2"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
